created the styling file, added the chart image, and added the navbar

--- a/index.html
+++ b/index.html
@@ -4,19 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghislain | Expense Tracker</title>
+    <script src="https://kit.fontawesome.com/95ebfc49eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
+        <div class="navbar">
+            <nav>
+                <h1 id="name">Hey Ghislain</h1>
+                <div class="links">
+                    <ul>
+                        <li>Home</li>
+                        <li>Activity</li>
+                        <li>card</li>
+                        <li><i class="fa-solid fa-circle-user"></i></li>
+                    </ul>
+                </div>
+                <i class="fa-solid fa-bell"></i>
+            </nav>
+        </div>
         <div class="top">
             <div class="card">
+                <p>NG</p>
                 <h1 class="income">FCFA16,630.00 <span>+13% income last month</span></h1>
                 <div class="inome-ex">
                     <h1>Expense <span>10,112.00</span></h1>
                     <h1>Balance <span>6,517.00</span></h1>
                 </div>
+                <button>Top Up</button>
             </div>
             <div class="chart">
-
+                <img src="17905.jpg" alt="Your Expense Chart">
             </div>
         </div>
     </div>
