--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghislain | Expense Tracker</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/95ebfc49eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -11,29 +12,33 @@
         <div class="navbar">
             <nav>
                 <h1 id="name">Hey Ghislain</h1>
-                <div class="links">
-                    <ul>
-                        <li>Home</li>
-                        <li>Activity</li>
-                        <li>card</li>
-                        <li><i class="fa-solid fa-circle-user"></i></li>
-                    </ul>
+                <div class="right">
+                    <div class="links">
+                        <ul>
+                            <li>Home</li>
+                            <li>Activity</li>
+                            <li>card</li>
+                            <li><i class="fa-solid fa-circle-user"></i></li>
+                        </ul>
+                    </div>
+                    <i class="fa-solid fa-bell"></i>
                 </div>
-                <i class="fa-solid fa-bell"></i>
             </nav>
         </div>
         <div class="top">
-            <div class="card">
-                <p>NG</p>
-                <h1 class="income">FCFA16,630.00 <span>+13% income last month</span></h1>
-                <div class="inome-ex">
-                    <h1>Expense <span>10,112.00</span></h1>
-                    <h1>Balance <span>6,517.00</span></h1>
+            <div class="left">
+                <div class="card">
+                    <p>GC card</p>
+                    <h1 class="income"><span class="incomes">FCFA 16,630.00</span> <span class="span">+13% income from last month</span></h1>
+                    <div class="income-ex">
+                        <h1><span class="exp">Expense</span><span class="money">10,112.0</span></h1>
+                        <h1><span class="exp">Balance</span><span class="money">6,517.0</span></h1>
+                    </div>
+                    <button>Top Up</button>
                 </div>
-                <button>Top Up</button>
             </div>
             <div class="chart">
-                <img src="17905.jpg" alt="Your Expense Chart">
+                <img src="17905.jpg" alt="Your Expense Chart" height="100px" width="100px">
             </div>
         </div>
     </div>
