came done with the bar chart section bothe design and layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 </div>
             </div>
             <div class="chart">
-                <img src="17905.jpg" alt="Your Expense Chart" height="100px" width="100px">
+                <h1>Your Monthly Tracker</h1>
+                <img src="17905.jpg" alt="Your Expense Chart">
             </div>
         </div>
     </div>
