inserted the content for the quick tap in html. currently going to start the styling

--- a/index.html
+++ b/index.html
@@ -42,6 +42,29 @@
                 <img src="17905.jpg" alt="Your Expense Chart">
             </div>
         </div>
+        <div class="quick">
+            <div class="header">
+                <h1>Quick access</h1>
+            </div>
+            <div class="access">
+                <div class="accesses">
+                    <i class="fa-solid fa-money-bill-trend-up"></i>
+                    <h1>Top Up</h1>
+                </div>
+                <div class="accesses">
+                    <i class="fa-solid fa-arrow-up-from-bracket"></i>
+                    <h1>Withdraw</h1>
+                </div>
+                <div class="accesses">
+                    <i class="fa-solid fa-money-bill-transfer"></i>
+                    <h1>Send</h1>
+                </div>
+                <div class="accesses">
+                    <i class="fa-solid fa-calendar-plus"></i>
+                    <h1>Schedule</h1>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
