donw with the transactions section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,63 @@
                 </div>
             </div>
         </div>
+        <div class="transactions">
+            <h1>Transactions</h1>
+            <div class="all">
+                <div class="all-line">
+                    <div class="info">
+                        <div class="mouse">
+                            <i class="fa-solid fa-money-bill-trend-up"></i>
+                            <h1>Top Ups</h1>
+                        </div>
+                        <h2>+10,000.0</h2>
+                    </div>
+                    <div class="details">
+                        <i class="fa-solid fa-circle-info"></i>
+                        <p>Details</p>
+                    </div>
+                </div>
+                <div class="all-line">
+                    <div class="info">
+                        <div class="mouse">
+                            <i class="fa-solid fa-arrow-up-from-bracket"></i>
+                            <h1>Withdraws</h1>
+                        </div>
+                        <h2>-3020.0</h2>
+                    </div>
+                    <div class="details">
+                        <i class="fa-solid fa-circle-info"></i>
+                        <p>Details</p>
+                    </div>
+                </div>
+                <div class="all-line">
+                    <div class="info">
+                        <div class="mouse">
+                            <i class="fa-solid fa-money-bill-transfer"></i>
+                            <h1>Transfers</h1>
+                        </div>
+                        <h2>-4080.0</h2>
+                    </div>
+                    <div class="details">
+                        <i class="fa-solid fa-circle-info"></i>
+                        <p>Details</p>
+                    </div>
+                </div>
+                <div class="all-line">
+                    <div class="info">
+                        <div class="mouse">
+                            <i class="fa-solid fa-coins"></i>
+                            <h1>Premium Fee</h1>
+                        </div>
+                        <h2>-1000.0</h2>
+                    </div>
+                    <div class="details">
+                        <i class="fa-solid fa-circle-info"></i>
+                        <p>Details</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
