added some col animations to the buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="right">
                     <div class="links">
                         <ul>
-                            <li>Home</li>
+                            <li class="active">Home</li>
                             <li>Activity</li>
                             <li>card</li>
                             <li><i class="fa-solid fa-circle-user"></i></li>
