--- a/activity.html
+++ b/activity.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity | Ghislain</title>
+    <link rel="stylesheet" href="activity.css">
+    <script src="https://kit.fontawesome.com/95ebfc49eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
