did the linking from the home page to the activity and back. and also modified and edited some few things

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div class="right">
                     <div class="links">
                         <ul>
-                            <li class="active">Home</li>
-                            <li>Activity</li>
-                            <li>card</li>
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="activity.html">Activity</a></li>
+                            <li><a href="#">Card</a></li>
                             <li><i class="fa-solid fa-circle-user"></i></li>
                         </ul>
                     </div>
