--- a/activity.html
+++ b/activity.html
@@ -16,9 +16,9 @@
                 <div class="right">
                     <div class="links">
                         <ul>
-                            <li class="active">Home</li>
-                            <li>Activity</li>
-                            <li>card</li>
+                            <li><a href="index.html">Home</a></li>
+                            <li class="active"><a href="activity.html">Activity</a></li>
+                            <li><a href="#">Card</a></li>
                             <li><i class="fa-solid fa-circle-user"></i></li>
                         </ul>
                     </div>
