added the footer in the home page

--- a/index.html
+++ b/index.html
@@ -123,5 +123,10 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="foot">
+            <h1>&copy; 2025 Ghislain Expense Tracker . All Rights Reserved</h1>
+        </div>
+    </footer>
 </body>
 </html>
