--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="overlay"></div>
         <div class="navbar">
             <nav>
                 <h1 id="name">Hey Ghislain</h1>
@@ -18,10 +19,12 @@
                             <li class="active"><a href="index.html">Home</a></li>
                             <li><a href="activity.html">Activity</a></li>
                             <li><a href="#">Card</a></li>
-                            <li><i class="fa-solid fa-circle-user"></i></li>
                         </ul>
                     </div>
+                    <i class="fa-solid fa-bars"></i>
                     <i class="fa-solid fa-bell"></i>
+                    <i class="fa-solid fa-circle-user"></i>
+                    
                 </div>
             </nav>
         </div>
