--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/95ebfc49eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="overlay" id="overlay"></div>
     <div class="container">
         <div class="overlay" id="overlay"></div>
         <div class="navbar">
