added a heading to the form

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                     
                 </div>
                 <form action="">
+                    <h1>Deposit Into Your Card</h1>
                     <label for="name">Name <br>
                         <input type="text" placeholder="Input your name" required>
                     </label>
