--- a/activity.html
+++ b/activity.html
@@ -8,20 +8,23 @@
     <script src="https://kit.fontawesome.com/95ebfc49eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="overlay" id="overlay"></div>
     <div class="container">
         <div class="navbar">
             <nav>
                 <h1 id="name">Hey Ghislain</h1>
-                <div class="right">
-                    <div class="links">
-                        <ul>
+                <div class="right" id="right">
+                    <div class="links" id="links">
+                        <ul id="lists">
                             <li><a href="index.html">Home</a></li>
                             <li class="active"><a href="activity.html">Activity</a></li>
                             <li><a href="#">Card</a></li>
-                            <li><i class="fa-solid fa-circle-user"></i></li>
                         </ul>
                     </div>
+                    <i class="fa-solid fa-bars" id="menu"></i>
                     <i class="fa-solid fa-bell"></i>
+                    <i class="fa-solid fa-circle-user"></i>
+                    
                 </div>
             </nav>
         </div>
@@ -123,6 +126,44 @@
     </footer>
 
     <script>
+        // Mobile menu functionality
+        let overlay = document.getElementById('overlay')
+        let menu = document.getElementById('menu')
+        let lists = document.getElementById('lists')
+        let right = document.getElementById('right')
+        let links = document.getElementById('links')
+        let isOpen = false
+
+        menu.addEventListener('click', function(){
+            isOpen = !isOpen
+            if(isOpen){
+                overlay.style.display = 'block'
+                links.style.display = 'block'
+                right.style.zIndex = '101'
+                right.style.color = '#7ce1ff'
+                menu.classList.remove('fa-bars')
+                menu.classList.add('fa-xmark')
+            }
+            else{
+                overlay.style.display = 'none'
+                links.style.display = 'none'
+                right.style.color = '#000'
+                menu.classList.remove('fa-xmark')
+                menu.classList.add('fa-bars')
+                right.style.zIndex = '1'
+            }
+        })
+
+        overlay.addEventListener('click', () => {
+            isOpen = false;
+            overlay.style.display = 'none'
+            links.style.display = 'none'
+            right.style.color = '#000'
+            menu.classList.remove('fa-xmark')
+            menu.classList.add('fa-bars')
+            right.style.zIndex = '1'
+        })
+
         // Global variables for transaction tracking
         let allTransactions = []
         let filteredTransactions = []
