--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
                         <h2 id="topps">0.0</h2>
                     </div>
-                    <div class="details">
+                    <div class="details" onclick="showTopUpDetails()">
                         <i class="fa-solid fa-circle-info"></i>
                         <p>Details</p>
                     </div>
@@ -94,7 +94,7 @@
                         </div>
                         <h2 id="withdraws">0.0</h2>
                     </div>
-                    <div class="details">
+                    <div class="details" onclick="showWithdrawDetails()">
                         <i class="fa-solid fa-circle-info"></i>
                         <p>Details</p>
                     </div>
@@ -107,7 +107,7 @@
                         </div>
                         <h2 id="transfers">0.0</h2>
                     </div>
-                    <div class="details">
+                    <div class="details" onclick="showTransferDetails()">
                         <i class="fa-solid fa-circle-info"></i>
                         <p>Details</p>
                     </div>
@@ -120,7 +120,7 @@
                         </div>
                         <h2>0.0</h2>
                     </div>
-                    <div class="details">
+                    <div class="details" onclick="showPremiumDetails()">
                         <i class="fa-solid fa-circle-info"></i>
                         <p>Details</p>
                     </div>
@@ -266,6 +266,58 @@
                     </label>
                     <button type="submit">Schedule Transaction <i class="fa-solid fa-arrow-right"></i></button>
                 </form>
+            </div>
+        </div>
+    </div>
+    <div class="fill" id="topUpDetails">
+        <div class="filling">
+            <div class="deposit">
+                <i class="fa-solid fa-xmark" id="closeTopUpDetails"></i>
+                <div class="details-content">
+                    <h1>Top Up Transaction Details</h1>
+                    <div id="topUpDetailsList">
+                        <!-- Transaction details will be loaded here -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fill" id="withdrawDetails">
+        <div class="filling">
+            <div class="deposit">
+                <i class="fa-solid fa-xmark" id="closeWithdrawDetails"></i>
+                <div class="details-content">
+                    <h1>Withdrawal Transaction Details</h1>
+                    <div id="withdrawDetailsList">
+                        <!-- Transaction details will be loaded here -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fill" id="transferDetails">
+        <div class="filling">
+            <div class="deposit">
+                <i class="fa-solid fa-xmark" id="closeTransferDetails"></i>
+                <div class="details-content">
+                    <h1>Transfer Transaction Details</h1>
+                    <div id="transferDetailsList">
+                        <!-- Transaction details will be loaded here -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fill" id="premiumDetails">
+        <div class="filling">
+            <div class="deposit">
+                <i class="fa-solid fa-xmark" id="closePremiumDetails"></i>
+                <div class="details-content">
+                    <h1>Premium Fee Details</h1>
+                    <div id="premiumDetailsList">
+                        <!-- Transaction details will be loaded here -->
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -869,6 +921,180 @@
 
         // Load data when page loads
         loadFromLocalStorage()
+
+        // Function to show Top Up transaction details
+        function showTopUpDetails() {
+            const transactions = JSON.parse(localStorage.getItem('transactionHistory') || '[]');
+            const topUpTransactions = transactions.filter(t => t.type === 'topup');
+
+            if (topUpTransactions.length === 0) {
+                alert('No Top Up transactions found.');
+                return;
+            }
+
+            const detailsList = document.getElementById('topUpDetailsList');
+            detailsList.innerHTML = topUpTransactions.map(t => `
+                <div class="transaction-detail-item">
+                    <div class="detail-header">
+                        <i class="fa-solid fa-money-bill-trend-up" style="color: #28a745;"></i>
+                        <span class="amount">+FCFA ${t.amount.toLocaleString()}</span>
+                    </div>
+                    <div class="detail-info">
+                        <p><strong>Date:</strong> ${new Date(t.date).toLocaleDateString()} at ${new Date(t.date).toLocaleTimeString()}</p>
+                        <p><strong>Reason:</strong> ${t.reason || 'N/A'}</p>
+                        <p><strong>Method:</strong> ${t.method || 'N/A'}</p>
+                        <p><strong>Transaction ID:</strong> ${t.id.toString().slice(-6)}</p>
+                    </div>
+                </div>
+            `).join('');
+
+            overla();
+            showTopUpDetailsModal();
+        }
+
+        // Function to show Withdrawal transaction details
+        function showWithdrawDetails() {
+            const transactions = JSON.parse(localStorage.getItem('transactionHistory') || '[]');
+            const withdrawTransactions = transactions.filter(t => t.type === 'withdraw');
+
+            if (withdrawTransactions.length === 0) {
+                alert('No Withdrawal transactions found.');
+                return;
+            }
+
+            const detailsList = document.getElementById('withdrawDetailsList');
+            detailsList.innerHTML = withdrawTransactions.map(t => `
+                <div class="transaction-detail-item">
+                    <div class="detail-header">
+                        <i class="fa-solid fa-arrow-up-from-bracket" style="color: #dc3545;"></i>
+                        <span class="amount">-FCFA ${t.amount.toLocaleString()}</span>
+                    </div>
+                    <div class="detail-info">
+                        <p><strong>Date:</strong> ${new Date(t.date).toLocaleDateString()} at ${new Date(t.date).toLocaleTimeString()}</p>
+                        <p><strong>Reason:</strong> ${t.reason || 'N/A'}</p>
+                        <p><strong>Method:</strong> ${t.method || 'N/A'}</p>
+                        <p><strong>Transaction ID:</strong> ${t.id.toString().slice(-6)}</p>
+                    </div>
+                </div>
+            `).join('');
+
+            overla();
+            showWithdrawDetailsModal();
+        }
+
+        // Function to show Transfer transaction details
+        function showTransferDetails() {
+            const transactions = JSON.parse(localStorage.getItem('transactionHistory') || '[]');
+            const transferTransactions = transactions.filter(t => t.type === 'send');
+
+            if (transferTransactions.length === 0) {
+                alert('No Transfer transactions found.');
+                return;
+            }
+
+            const detailsList = document.getElementById('transferDetailsList');
+            detailsList.innerHTML = transferTransactions.map(t => `
+                <div class="transaction-detail-item">
+                    <div class="detail-header">
+                        <i class="fa-solid fa-money-bill-transfer" style="color: #dc3545;"></i>
+                        <span class="amount">-FCFA ${t.amount.toLocaleString()}</span>
+                    </div>
+                    <div class="detail-info">
+                        <p><strong>Date:</strong> ${new Date(t.date).toLocaleDateString()} at ${new Date(t.date).toLocaleTimeString()}</p>
+                        <p><strong>Reason:</strong> ${t.reason || 'N/A'}</p>
+                        <p><strong>Method:</strong> ${t.method || 'N/A'}</p>
+                        <p><strong>Sender:</strong> ${t.senderName || 'N/A'}</p>
+                        <p><strong>Recipient:</strong> ${t.recipientName || 'N/A'}</p>
+                        <p><strong>Phone:</strong> ${t.recipientPhone || 'N/A'}</p>
+                        <p><strong>Transaction ID:</strong> ${t.id.toString().slice(-6)}</p>
+                    </div>
+                </div>
+            `).join('');
+
+            overla();
+            showTransferDetailsModal();
+        }
+
+        // Function to show Premium Fee details
+        function showPremiumDetails() {
+            const transactions = JSON.parse(localStorage.getItem('transactionHistory') || '[]');
+            const premiumTransactions = transactions.filter(t => t.type === 'premium');
+
+            if (premiumTransactions.length === 0) {
+                alert('No Premium Fee transactions found.');
+                return;
+            }
+
+            const detailsList = document.getElementById('premiumDetailsList');
+            detailsList.innerHTML = premiumTransactions.map(t => `
+                <div class="transaction-detail-item">
+                    <div class="detail-header">
+                        <i class="fa-solid fa-coins" style="color: #ffc107;"></i>
+                        <span class="amount">-FCFA ${t.amount.toLocaleString()}</span>
+                    </div>
+                    <div class="detail-info">
+                        <p><strong>Date:</strong> ${new Date(t.date).toLocaleDateString()} at ${new Date(t.date).toLocaleTimeString()}</p>
+                        <p><strong>Reason:</strong> ${t.reason || 'N/A'}</p>
+                        <p><strong>Transaction ID:</strong> ${t.id.toString().slice(-6)}</p>
+                    </div>
+                </div>
+            `).join('');
+
+            overla();
+            showPremiumDetailsModal();
+        }
+
+        // Modal display functions
+        function showTopUpDetailsModal() {
+            setTimeout(() => {
+                document.getElementById('topUpDetails').style.display = 'block';
+            }, 1000);
+        }
+
+        function showWithdrawDetailsModal() {
+            setTimeout(() => {
+                document.getElementById('withdrawDetails').style.display = 'block';
+            }, 1000);
+        }
+
+        function showTransferDetailsModal() {
+            setTimeout(() => {
+                document.getElementById('transferDetails').style.display = 'block';
+            }, 1000);
+        }
+
+        function showPremiumDetailsModal() {
+            setTimeout(() => {
+                document.getElementById('premiumDetails').style.display = 'block';
+            }, 1000);
+        }
+
+        // Close modal functions
+        function closeTopUpDetails() {
+            document.getElementById('topUpDetails').style.display = 'none';
+            xoverla();
+        }
+
+        function closeWithdrawDetails() {
+            document.getElementById('withdrawDetails').style.display = 'none';
+            xoverla();
+        }
+
+        function closeTransferDetails() {
+            document.getElementById('transferDetails').style.display = 'none';
+            xoverla();
+        }
+
+        function closePremiumDetails() {
+            document.getElementById('premiumDetails').style.display = 'none';
+            xoverla();
+        }
+
+        // Event listeners for close buttons
+        document.getElementById('closeTopUpDetails').addEventListener('click', closeTopUpDetails);
+        document.getElementById('closeWithdrawDetails').addEventListener('click', closeWithdrawDetails);
+        document.getElementById('closeTransferDetails').addEventListener('click', closeTransferDetails);
+        document.getElementById('closePremiumDetails').addEventListener('click', closePremiumDetails);
     </script>
 </body>
 </html>
