--- a/register.html
+++ b/register.html
@@ -271,14 +271,14 @@
                     <div class="form-group">
                         <label for="firstName">First Name</label>
                         <div class="input-group">
-                            <input type="text" id="firstName" placeholder="John" required>
+                            <input type="text" id="firstName" placeholder="First Name" required>
                         </div>
                     </div>
                     
                     <div class="form-group">
                         <label for="lastName">Last Name</label>
                         <div class="input-group">
-                            <input type="text" id="lastName" placeholder="Doe" required>
+                            <input type="text" id="lastName" placeholder="Last Name" required>
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
                 <div class="form-group">
                     <label for="password">Password</label>
                     <div class="input-group">
-                        <input type="password" id="password" placeholder="••••••••" required>
+                        <input type="password" id="password" placeholder="*******" required>
                         <i class="fa-solid fa-eye-slash toggle-password" onclick="togglePassword('password')"></i>
                     </div>
                 </div>
